--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2014 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -66,7 +66,7 @@
     <scm>
         <connection>scm:svn:https://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</connection>
         <developerConnection>scm:svn:https://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</developerConnection>
-        <url>http://java.net/projects/stax-ex/sources/svn/show/branches/mr_2_2_new/api</url>
+        <url>http://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</url>
     </scm>
 
     <licenses>
