--- a/api/pom.xml
+++ b/api/pom.xml
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+            <version>${jaxb.version}</version>
         </dependency>
 
         <dependency>
@@ -113,6 +113,7 @@
 
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.3</spec.version>
+        <jaxb.version>2.3.0-SNAPSHOT</jaxb.version>
         
         <non.final>false</non.final>        
 
