--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2015 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2016 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -102,7 +102,7 @@
         <dependency>
             <groupId>javax.xml.soap</groupId>
             <artifactId>javax.xml.soap-api</artifactId>
-            <version>1.3.8-SNAPSHOT</version>
+            <version>${soap.version}</version>
         </dependency>
     </dependencies>
 
@@ -114,6 +114,7 @@
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.3</spec.version>
         <jaxb.version>2.3.0-SNAPSHOT</jaxb.version>
+        <soap.version>1.3.8-SNAPSHOT</soap.version>
         
         <non.final>false</non.final>        
 
