--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,7 +49,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>2.3.0.b1611071630</version>
+    <version>2.3.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -67,8 +67,7 @@
         <connection>scm:svn:https://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>http://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</url>
-      <tag>jaxws-api-2.3.0.b1611071630</tag>
-  </scm>
+    </scm>
 
     <licenses>
         <license>
