--- a/api/pom.xml
+++ b/api/pom.xml
@@ -240,28 +240,6 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.glassfish.build</groupId>
-                <artifactId>spec-version-maven-plugin</artifactId>
-                <version>1.2</version>
-                <configuration>
-                    <spec>
-                        <nonFinal>${non.final}</nonFinal>
-                        <jarType>api</jarType>
-                        <specVersion>${spec.version}</specVersion>
-                        <specImplVersion>${project.version}</specImplVersion>
-                        <apiPackage>${extension.name}</apiPackage>
-                    </spec>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>set-spec-properties</goal>
-                            <goal>check-module</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
@@ -415,6 +393,39 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>spec-version-check</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.glassfish.build</groupId>
+                        <artifactId>spec-version-maven-plugin</artifactId>
+                        <version>1.2</version>
+                        <configuration>
+                            <spec>
+                                <nonFinal>${non.final}</nonFinal>
+                                <jarType>api</jarType>
+                                <specVersion>${spec.version}</specVersion>
+                                <specImplVersion>${project.version}</specImplVersion>
+                                <apiPackage>${extension.name}</apiPackage>a
+                            </spec>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>set-spec-properties</goal>
+                                    <goal>check-module</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
     </profiles>
 
 </project>
