--- a/api/pom.xml
+++ b/api/pom.xml
@@ -114,7 +114,7 @@
 
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.3</spec.version>
-        <jaxb.version>2.3.0-SNAPSHOT</jaxb.version>
+        <jaxb.version>2.3.0-b161121.1438</jaxb.version>
         <soap.version>1.3.8</soap.version>
         
         <non.final>false</non.final>        
