--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,7 +2,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2016 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2017 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -53,12 +53,12 @@
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
-    
+
     <organization>
         <name>Oracle</name>
         <url>http://www.oracle.com</url>
     </organization>
-    
+
     <inceptionYear>2005</inceptionYear>
     <description>JAX-WS (JSR 224) API</description>
     <url>http://jsr224.java.net/</url>
@@ -114,10 +114,11 @@
 
         <extension.name>javax.xml.ws</extension.name>
         <spec.version>2.3</spec.version>
-        <jaxb.version>2.3.0-b161121.1438</jaxb.version>
-        <soap.version>1.3.8</soap.version>
-        
-        <non.final>false</non.final>        
+        <old.spec.version>2.2</old.spec.version>
+        <jaxb.version>2.3.0-b170201.1255</jaxb.version>
+        <soap.version>1.4.0-b01</soap.version>
+
+        <non.final>false</non.final>
 
         <findbugs.exclude>${project.basedir}/exclude.xml</findbugs.exclude>
         <findbugs.threshold>Low</findbugs.threshold>
@@ -153,7 +154,7 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.5.1</version>
+                    <version>3.6.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -168,7 +169,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>2.8.1</version>
+                    <version>2.10.4</version>
                 </plugin>
 
                 <plugin>
@@ -254,7 +255,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -281,7 +281,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -307,7 +307,7 @@
                         <Bundle-SymbolicName>${spec.bundle.symbolic-name}</Bundle-SymbolicName>
                         <Extension-Name>${spec.extension.name}</Extension-Name>
                         <Implementation-Version>${spec.implementation.version}</Implementation-Version>
-                        <Specification-Version>${spec.specification.version}</Specification-Version> 
+                        <Specification-Version>${spec.specification.version}</Specification-Version>
                         <Export-Package>${extension.name}.*; version=${spec.version}</Export-Package>
                         <DynamicImport-Package>org.glassfish.hk2.osgiresourcelocator</DynamicImport-Package>
                         <Specification-Vendor>Oracle Corporation</Specification-Vendor>
@@ -334,7 +334,7 @@
                     <useReleaseProfile>false</useReleaseProfile>
                     <arguments>${release.arguments}</arguments>
                     <releaseVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-b${maven.build.timestamp}</releaseVersion>
-                    <developmentVersion>${pom.version}</developmentVersion>
+                    <developmentVersion>${project.version}</developmentVersion>
                 </configuration>
             </plugin>
             <plugin>
@@ -363,14 +363,14 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'>Metro Web Se
                         <![CDATA[<font size=-1>
 <br>Comments to: <a href='mailto:${release.spec.feedback}'><i>${release.spec.feedback}</i></a>
 <br>More information at: <a target='_top'
-href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web Services Overview</i></a> 
-<br>Copyright &copy; 2005, 2011, Oracle and/or its affiliates. All rights reserved.
+href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web Services Overview</i></a>
+<br>Copyright &copy; 2005, 2017, Oracle and/or its affiliates. All rights reserved.
 </font>]]>
                     </bottom>
                     <detectJavaApiLink>false</detectJavaApiLink>
                     <offlineLinks>
                         <offlineLink>
-                            <url>http://download.oracle.com/javase/6/docs/api/</url>
+                            <url>http://download.oracle.com/javase/8/docs/api/</url>
                             <location>${basedir}/offline-javadoc</location>
                         </offlineLink>
                     </offlineLinks>
@@ -444,7 +444,8 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
                             <spec>
                                 <nonFinal>${non.final}</nonFinal>
                                 <jarType>api</jarType>
-                                <specVersion>${spec.version}</specVersion>
+                                <specVersion>${old.spec.version}</specVersion>
+                                <newSpecVersion>${spec.version}</newSpecVersion>
                                 <specImplVersion>${project.version}</specImplVersion>
                                 <apiPackage>${extension.name}</apiPackage>a
                             </spec>
