--- a/api/pom.xml
+++ b/api/pom.xml
@@ -116,7 +116,7 @@
         <spec.version>2.3</spec.version>
         <old.spec.version>2.2</old.spec.version>
         <jaxb.version>2.3.0-b170201.1204</jaxb.version>
-        <soap.version>1.4.0-SNAPSHOT</soap.version>
+        <soap.version>1.4.0-b01</soap.version>
 
         <non.final>false</non.final>
         <mod.dir>${project.build.directory}/mods</mod.dir>
