--- a/api/pom.xml
+++ b/api/pom.xml
@@ -116,7 +116,7 @@
         <spec.version>2.3</spec.version>
         <old.spec.version>2.2</old.spec.version>
         <jaxb.version>2.3.0-b170201.1204</jaxb.version>
-        <soap.version>1.4.0-b01</soap.version>
+        <soap.version>1.4.0-SNAPSHOT</soap.version>
 
         <non.final>false</non.final>
         <mod.dir>${project.build.directory}/mods</mod.dir>
@@ -504,7 +504,7 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
                                 <includeDependencySources>false</includeDependencySources>
                                 <additionalJOptions>
                                     <additionalJOption>--add-modules</additionalJOption>
-                                    <additionalJOption>java.xml.soap,java.xml.bind,java.annotations.common</additionalJOption>
+                                    <additionalJOption>java.xml.soap,java.xml.bind,java.xml.ws.annotation</additionalJOption>
                                     <additionalJOption>--module-path</additionalJOption>
                                     <additionalJOption>${mod.dir}</additionalJOption>
                                 </additionalJOptions>
@@ -516,6 +516,7 @@ href='http://www.oracle.com/technetwork/java/index-jsp-137004.html'><i>Metro Web
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
+                        <version>1.12</version>
                         <executions>
                             <execution>
                                 <id>add-jdk9-source</id>
