--- a/api/pom.xml
+++ b/api/pom.xml
@@ -49,7 +49,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javax.xml.ws</groupId>
     <artifactId>jaxws-api</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.3.0-b170323.2210</version>
     <packaging>jar</packaging>
 
     <name>JAX-WS API</name>
@@ -67,7 +67,7 @@
         <connection>scm:git:git://java.net/jsr224~git</connection>
         <developerConnection>${scm.developerConnection}</developerConnection>
         <url>http://svn.java.net/svn/jsr224~svn/branches/mr_2_2_new/api</url>
-      <tag>HEAD</tag>
+      <tag>jaxws-api-2.3.0-b170323.2210</tag>
   </scm>
 
     <licenses>
